fix selected story overflow

--- a/public/static/css/parts/stories.css
+++ b/public/static/css/parts/stories.css
@@ -11,7 +11,7 @@
 }
 
 #selected_container {
-  overflow: inherit;
+  overflow: hidden;
   border-bottom: 1px solid var(--sep-color);
   border-top: 1px solid var(--sep-color);
 }
